--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="robots" content="index,follow">
     <meta name="author" content="Thalyson Alexandre Rodrigues de Sousa">
     <!-- ICONS -->
-    <link rel="icon" type="image/png" href="/static/images/favicon16.ico"/>
-    <link rel="icon" type="image/png" href="/static/images/favicon32.ico"/>
+    <link rel="icon" type="image/png" href="/static/img/favicon16.ico"/>
+    <link rel="icon" type="image/png" href="/static/img/favicon32.ico"/>
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="/static/css/style.css">
     <!-- Font Awesome -->
